# ab-testing-framework

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
abkit/: __init__.py  compare.py  experiment.py  logger.py  reporting.py
abkit/novelty/: __init__.py  correction.py
abkit/stats/: __init__.py  cuped.py  guardrails.py  sequential.py
data/: case1_checkout_cta.csv  case2_homepage_banner.csv  case3_pricing_page.csv  case4_recommendation_algo.csv  checkout_redesign.csv  sample_experiment.csv
docs/: methodology.md
notebooks/: 01_cuped_demo.ipynb  02_sequential_testing_demo.ipynb
src/: __init__.py  compare.py  experiment.py  logger.py  reporting.py
src/novelty/: __init__.py  correction.py
src/stats/: __init__.py  cuped.py  guardrails.py  power.py  sequential.py
tests/: test_cuped.py  test_power.py  test_sequential.py
